Template layout fixes, searchButtons and langin widgets, user project initialization and small fixes

--- a/composer.json
+++ b/composer.json
@@ -1,32 +1,29 @@
 {
-    "name": "yiisoft/yii2-app-basic",
-    "description": "Yii 2 Basic Project Template",
-    "keywords": ["yii2", "framework", "basic", "project template"],
-    "homepage": "http://www.yiiframework.com/",
+    "name": "utmstat/saas_base",
+    "description": "SAAS template by datamonster.ru",
+    "keywords": ["utmstat", "saas", "project template"],
+    "homepage": "https://datamonster.ru/",
     "type": "project",
     "license": "BSD-3-Clause",
-    "support": {
-        "issues": "https://github.com/yiisoft/yii2/issues?state=open",
-        "forum": "http://www.yiiframework.com/forum/",
-        "wiki": "http://www.yiiframework.com/wiki/",
-        "irc": "irc://irc.freenode.net/yii",
-        "source": "https://github.com/yiisoft/yii2"
-    },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "require": {
         "php": ">=7.4",
         "ext-json": "*",
-        "yiisoft/yii2": "~2.0.14",
+        "ext-pdo": "*",
+        "yiisoft/yii2": "~2.0.46",
         "yiisoft/yii2-bootstrap4": "~2.0.9",
-        "yiisoft/yii2-swiftmailer": "~2.0.0 || ~2.1.0",
+        "yiisoft/yii2-swiftmailer": "~2.1.0",
         "guzzlehttp/guzzle": "^7.3",
         "omnilight/yii2-scheduling": "^1.1",
-        "kartik-v/yii2-widget-select2": "@dev",
+        "kartik-v/yii2-widget-select2": "^2.2",
+        "kartik-v/yii2-widget-datepicker": "^1.4",
         "supplyhog/yii2-clipboardjs": "dev-master",
-        "claviska/simpleimage": "*",
-        "ramsey/uuid": "^4.2"
+        "claviska/simpleimage": "^3.7.0",
+        "ramsey/uuid": "^4.2",
+        "matomo/device-detector": "^6.0"
     },
     "require-dev": {
+        "roave/security-advisories": "dev-latest",
         "yiisoft/yii2-debug": "~2.1.0",
         "yiisoft/yii2-gii": "~2.1.0",
         "yiisoft/yii2-faker": "~2.0.0",
