--- a/composer.json
+++ b/composer.json
@@ -24,19 +24,19 @@
     },
     "require-dev": {
         "roave/security-advisories": "dev-latest",
-        "yiisoft/yii2-debug": "~2.1.0",
-        "yiisoft/yii2-gii": "~2.1.0",
-        "yiisoft/yii2-faker": "~2.0.0",
-        "codeception/codeception": "^4.0",
-        "codeception/verify": "~0.5.0 || ~1.1.0",
-        "codeception/specify": "~0.4.6",
-        "symfony/browser-kit": ">=2.7 <=4.2.4",
-        "codeception/module-filesystem": "^1.0.0",
-        "codeception/module-yii2": "^1.0.0",
-        "codeception/module-asserts": "^1.0.0",
-        "codeception/module-rest": "^1.3",
-        "codeception/module-db": "^1.1",
-        "codeception/module-phpbrowser": "^1.0"
+        "yiisoft/yii2-debug": "*",
+        "yiisoft/yii2-gii": "*",
+        "yiisoft/yii2-faker": "*",
+        "codeception/codeception": "*",
+        "codeception/verify": "*",
+        "codeception/specify": "*",
+        "symfony/browser-kit": "*",
+        "codeception/module-filesystem": "*",
+        "codeception/module-yii2": "*",
+        "codeception/module-asserts": "*",
+        "codeception/module-rest": "*",
+        "codeception/module-db": "*",
+        "codeception/module-phpbrowser": "*"
     },
     "config": {
         "process-timeout": 1800,
